mdapipkg/unpackaged/objects/Odoo_Config__c.object
<CustomObject>
    <fields>
        <fullName>Identifier__c</fullName>
        <label>Identifier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Table__c</fullName>
        <label>Table</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Odoo Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Table__c</columns>
        <columns>Text_Value__c</columns>
        <columns>Identifier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OC-{00000}</displayFormat>
        <label>Odoo Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Odoo Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>